Squashed commit of the following:
commit c9c66f6aeec4c8c11364b810a5591736ca6b67af
Author: fortinb <fortinb.perso@gmail.com>
Date:   Fri May 1 06:48:43 2026 -0400

    correct tests

commit 9ed1e2a991fc11608cd592b16b9e395f3b1c235f
Author: fortinb <fortinb.perso@gmail.com>
Date:   Wed Apr 29 09:08:31 2026 -0400

    correct tests after refactoring

commit e63491c298d039a67f5c1e6baeada896e1791a74
Author: fortinb <fortinb.perso@gmail.com>
Date:   Wed Apr 29 01:59:33 2026 -0400

    mongo repo

commit 7b08e743514f0b148456002148085dc0ad4a1885
Author: fortinb <fortinb.perso@gmail.com>
Date:   Mon Apr 27 04:29:57 2026 -0400

    rename mapper

commit 74c7048e08362d0aa3790263f905f35759afbdef
Author: fortinb <fortinb.perso@gmail.com>
Date:   Mon Apr 27 04:27:16 2026 -0400

    map dto to ref for port, move port adapter, rename portadapter

commit f9b3ea2c6e3c0908dc1676d932d62315a125923c
Author: fortinb <fortinb.perso@gmail.com>
Date:   Mon Apr 27 03:40:48 2026 -0400

    Clean architecture leakeage corrections

commit cdaf2795122fe78f335bd2d52274dd136ea1e7d9
Author: fortinb <fortinb.perso@gmail.com>
Date:   Sat Apr 25 08:23:49 2026 -0400

    isolate modules

commit 2088a5b70936975d39ba325b2b2b050e9fe0a0e1
Author: fortinb <fortinb.perso@gmail.com>
Date:   Sat Apr 25 07:58:07 2026 -0400

    finalyze clean architecture refactoring

commit 9c77525649d7310e8ce8bb3a9de8c1fdf2081615
Author: fortinb <fortinb.perso@gmail.com>
Date:   Fri Apr 24 05:06:32 2026 -0400

    refactor brand module to clean architecture

commit 86d879b197797b2cc4033f2fdc0e3f8b4231e4a6
Author: fortinb <fortinb.perso@gmail.com>
Date:   Thu Apr 23 05:16:03 2026 -0400

    clean architecture

commit 732bdd9f16f85212951e89202d1d034286145eeb
Author: fortinb <fortinb.perso@gmail.com>
Date:   Thu Apr 23 03:52:40 2026 -0400

    delete unuse mapper

commit f3f91119139ffac191e3179065717edb56be02f4
Author: fortinb <fortinb.perso@gmail.com>
Date:   Thu Apr 23 03:46:45 2026 -0400

    brand refactoring to be complient t