@@ -24,9 +24,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.boot.test.web.server.LocalServerPort;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
@@ -43,8 +40,6 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.iso.hypo.admin.papi.dto.ErrorDto;
 import com.iso.hypo.admin.papi.dto.LocalizedStringDto;
-import com.iso.hypo.admin.papi.dto.model.CourseDto;
-import com.iso.hypo.admin.papi.dto.model.GymDto;
 import com.iso.hypo.admin.papi.dto.model.MembershipPlanDto;
 import com.iso.hypo.admin.papi.dto.patch.PatchMembershipPlanDto;
 import com.iso.hypo.admin.papi.dto.post.PostMembershipPlanDto;
@@ -58,12 +53,15 @@ import com.iso.hypo.brand.domain.model.Gym;
 import com.iso.hypo.brand.domain.repository.BrandRepository;
 import com.iso.hypo.brand.domain.repository.CourseRepository;
 import com.iso.hypo.brand.domain.repository.GymRepository;
+import com.iso.hypo.common.application.dto.PageResultDto;
 import com.iso.hypo.common.application.security.Roles;
+import com.iso.hypo.common.domain.model.pagination.PageRequest;
+import com.iso.hypo.common.domain.model.pagination.PageResult;
 import com.iso.hypo.domain.BrandBuilder;
 import com.iso.hypo.domain.CourseBuilder;
 import com.iso.hypo.domain.GymBuilder;
 import com.iso.hypo.domain.MembershipPlanBuilder;
-import com.iso.hypo.membership.domain.exception.MembershipPlanException;
+import com.iso.hypo.membership.application.exception.MembershipPlanException;
 import com.iso.hypo.membership.domain.model.MembershipPlan;
 import com.iso.hypo.membership.domain.repository.MembershipPlanRepository;
 import com.iso.hypo.tests.http.HttpUtils;
@@ -87,7 +85,7 @@ class MembershipPlanControllerTests {
 	public static final String postDeactivateURI = "/v1/brands/%s/membership/plans/%s/deactivate";
 	public static final String patchURI = "/v1/brands/%s/membership/plans/%s";
 	public static final String deleteURI = "/v1/brands/%s/membership/plans/%s";
-	
+
 	public static final String deleteGymURI = "/v1/brands/%s/gyms/%s";
 	public static final String deleteCourseURI = "/v1/brands/%s/courses/%s";
 
@@ -99,22 +97,22 @@ class MembershipPlanControllerTests {
 	public static final String brandCode_FitnessBoxing = "MPFitnessBoxing";
 	public static final String brandCode_CrossfitExtreme = "MPCrossfitExtreme";
 	public static final String brandCode_ActiveDateBrand = "MPActiveDateBrand";
-	
+
 	@LocalServerPort
 	private int port;
 
 	@Autowired
 	BrandRepository brandRepository;
-	
+
 	@Autowired
 	MembershipPlanRepository membershipPlanRepository;
 
 	@Autowired
 	CourseRepository courseRepository;
-	
+
 	@Autowired
 	GymRepository gymRepository;
-	
+
 	@Autowired
 	ObjectMapper objectMapper;
 
@@ -129,10 +127,10 @@ class MembershipPlanControllerTests {
 	private MembershipPlan membershipPlanDeleted;
 	private Brand brand_FitnessBoxing;
 	private Brand brand_CrossfitExtreme;
-	
+
 	private List<MembershipPlan> membershipPlans = new ArrayList<MembershipPlan>();
-	private List<Course> courses = new ArrayList<Course>();
-	private List<Gym> gyms = new ArrayList<Gym>();
+	private List<String> courseUuids = new ArrayList<>();
+	private List<String> gymUuids = new ArrayList<>();
 
 	@BeforeAll
 	void arrange() {
@@ -141,23 +139,25 @@ class MembershipPlanControllerTests {
 
 		brand_FitnessBoxing = BrandBuilder.build(brandCode_FitnessBoxing, "Fitness Boxing");
 		brandRepository.save(brand_FitnessBoxing);
-		
+
 		brand_CrossfitExtreme = BrandBuilder.build(brandCode_CrossfitExtreme, "Crossfit Extreme");
-		brandRepository.save(brand_FitnessBoxing);
-		
+		brandRepository.save(brand_CrossfitExtreme);
+
 		for (int i = 0; i < 5; i++) {
 			Course item = CourseBuilder.build(brand_FitnessBoxing.getUuid());
 			item = courseRepository.save(item);
-			courses.add(item);
+			courseUuids.add(item.getUuid());
 		}
-		
+
 		for (int i = 0; i < 5; i++) {
-			Gym item = GymBuilder.build(brand_FitnessBoxing.getUuid(), faker.code().isbn10(), faker.address().cityName(), null);
+			Gym item = GymBuilder.build(brand_FitnessBoxing.getUuid(), faker.code().isbn10(),
+					faker.address().cityName(), null);
 			item = gymRepository.save(item);
-			gyms.add(item);
+			gymUuids.add(item.getUuid());
 		}
-		
-		membershipPlan = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gyms.subList(0, 2), courses.subList(0, 2));
+
+		membershipPlan = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gymUuids.subList(0, 2),
+				courseUuids.subList(0, 2));
 		membershipPlanRepository.save(membershipPlan);
 
 		membershipPlanDeleted = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null);
@@ -165,7 +165,7 @@ class MembershipPlanControllerTests {
 		membershipPlanDeleted = membershipPlanRepository.save(membershipPlanDeleted);
 
 		for (int i = 0; i < 10; i++) {
-			MembershipPlan item = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gyms, courses);
+			MembershipPlan item = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gymUuids, courseUuids);
 			membershipPlanRepository.save(item);
 			membershipPlans.add(item);
 		}
@@ -201,25 +201,25 @@ class MembershipPlanControllerTests {
 
 		// Act
 		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(listURI, brand_CrossfitExtreme.getUuid())), port, params), HttpMethod.GET,
-				httpEntity, JsonNode.class);
+				HttpUtils.createURL(URI.create(String.format(listURI, brand_CrossfitExtreme.getUuid())), port, params),
+				HttpMethod.GET, httpEntity, JsonNode.class);
 
 		// Assert
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
 				String.format("List error: %s", response.getStatusCode()));
 
-		Page<MembershipPlanDto> page = TestResponseUtils.toPage(response, new TypeReference<Page<MembershipPlanDto>>() {}, objectMapper);
+		PageResultDto<MembershipPlanDto> page = TestResponseUtils.toPage(response,
+				new TypeReference<PageResultDto<MembershipPlanDto>>() {
+				}, objectMapper);
 
 		// Assert
-		Assertions.assertEquals(0, page.getPageable().getPageNumber(),
-				String.format("Membership Plan list first page number invalid: %d", page.getPageable().getPageNumber()));
-		Assertions.assertEquals(4, page.getNumberOfElements(),
-				String.format("Membership Plan list first page number of elements invalid: %d", page.getNumberOfElements()));
-		Assertions.assertEquals(4, page.getTotalElements(),
-				String.format("Membership Plan total number of elements invalid: %d", page.getTotalElements()));
+		Assertions.assertEquals(0, page.getPageNumber(),
+				String.format("Membership Plan list first page number invalid: %d", page.getPageNumber()));
+		Assertions.assertEquals(4, page.getContent().size(), String
+				.format("Membership Plan list first page number of elements invalid: %d", page.getContent().size()));
 
-		page.get().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isActive()));
-		page.get().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isDeleted() == false));
+		page.getContent().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isActive()));
+		page.getContent().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isDeleted() == false));
 	}
 
 	@ParameterizedTest
@@ -236,24 +236,26 @@ class MembershipPlanControllerTests {
 
 		// Act
 		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(listURI, brand_CrossfitExtreme.getUuid())), port, params), HttpMethod.GET,
-				httpEntity, JsonNode.class);
+				HttpUtils.createURL(URI.create(String.format(listURI, brand_CrossfitExtreme.getUuid())), port, params),
+				HttpMethod.GET, httpEntity, JsonNode.class);
 
 		// Assert
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
 				String.format("List error: %s", response.getStatusCode()));
 
-		Page<MembershipPlanDto> page = TestResponseUtils.toPage(response, new TypeReference<Page<MembershipPlanDto>>() {}, objectMapper);
+		PageResultDto<MembershipPlanDto> page = TestResponseUtils.toPage(response,
+				new TypeReference<PageResultDto<MembershipPlanDto>>() {
+				}, objectMapper);
 
 		// Assert
-		Assertions.assertEquals(0, page.getPageable().getPageNumber(),
-				String.format("Membership Plan list first page number invalid: %d", page.getPageable().getPageNumber()));
-		Assertions.assertEquals(5, page.getNumberOfElements(),
-				String.format("Membership Plan list first page number of elements invalid: %d", page.getNumberOfElements()));
+		Assertions.assertEquals(0, page.getPageNumber(),
+				String.format("Membership Plan list first page number invalid: %d", page.getPageNumber()));
+		Assertions.assertEquals(5, page.getContent().size(), String
+				.format("Membership Plan list first page number of elements invalid: %d", page.getContent().size()));
 		Assertions.assertEquals(5, page.getTotalElements(),
 				String.format("Membership Plan total number of elements invalid: %d", page.getTotalElements()));
 
-		page.get().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isDeleted() == false));
+		page.getContent().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isDeleted() == false));
 	}
 
 	@ParameterizedTest
@@ -269,53 +271,60 @@ class MembershipPlanControllerTests {
 
 		// Act
 		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(listURI, brand_CrossfitExtreme.getUuid())), port, params), HttpMethod.GET,
-				httpEntity, JsonNode.class);
+				HttpUtils.createURL(URI.create(String.format(listURI, brand_CrossfitExtreme.getUuid())), port, params),
+				HttpMethod.GET, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
 				String.format("List error: %s", response.getStatusCode()));
 
-		Page<MembershipPlanDto> page = TestResponseUtils.toPage(response, new TypeReference<Page<MembershipPlanDto>>() {}, objectMapper);
+		PageResultDto<MembershipPlanDto> page = TestResponseUtils.toPage(response,
+				new TypeReference<PageResultDto<MembershipPlanDto>>() {
+				}, objectMapper);
 
 		// Assert
-		Assertions.assertEquals(1, page.getPageable().getPageNumber(),
-				String.format("Membership Plan list second page number invalid: %d", page.getPageable().getPageNumber()));
-		Assertions.assertEquals(2, page.getNumberOfElements(),
-				String.format("Membership Plan list second page number of elements invalid: %d", page.getNumberOfElements()));
-		
-		page.get().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isActive()));
-		page.get().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isDeleted() == false));
+		Assertions.assertEquals(1, page.getPageNumber(),
+				String.format("Membership Plan list second page number invalid: %d", page.getPageNumber()));
+		Assertions.assertEquals(2, page.getContent().size(), String
+				.format("Membership Plan list second page number of elements invalid: %d", page.getContent().size()));
+
+		page.getContent().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isActive()));
+		page.getContent().forEach(membershipPlan -> Assertions.assertTrue(membershipPlan.isDeleted() == false));
 	}
 
 	@ParameterizedTest
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
 	void testPostSuccess(String role, String user) throws MalformedURLException, JsonProcessingException, Exception {
 		// Arrange
-		PostMembershipPlanDto postDto = modelMapper.map(MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gyms, courses), PostMembershipPlanDto.class);
+		PostMembershipPlanDto postDto = modelMapper.map(
+				MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gymUuids, courseUuids),
+				PostMembershipPlanDto.class);
 
 		HttpEntity<PostMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, postDto);
 
 		// Act
 		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(postURI, brand_FitnessBoxing.getUuid())), port, null), HttpMethod.POST,
-				httpEntity, JsonNode.class);
+				HttpUtils.createURL(URI.create(String.format(postURI, brand_FitnessBoxing.getUuid())), port, null),
+				HttpMethod.POST, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.CREATED, response.getStatusCode(),
-				String.format("List error: %s", response.getStatusCode()));
-		
+				String.format("Create error: %s", response.getStatusCode()));
+
 		MembershipPlanDto createdDto = TestResponseUtils.toDto(response, MembershipPlanDto.class, objectMapper);
 		assertMembershipPlan(modelMapper.map(postDto, MembershipPlanDto.class), createdDto);
 	}
-	
+
 	@ParameterizedTest
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
-	void testPostFailureForbiddenBrandMismatch(String role, String user) throws MalformedURLException, JsonProcessingException, Exception {
+	void testPostFailureForbiddenBrandMismatch(String role, String user)
+			throws MalformedURLException, JsonProcessingException, Exception {
 		// Arrange
-		PostMembershipPlanDto postDto = modelMapper.map(MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PostMembershipPlanDto.class);
+		PostMembershipPlanDto postDto = modelMapper.map(
+				MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PostMembershipPlanDto.class);
 		HttpEntity<PostMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, postDto);
 
 		// Act
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(URI.create(String.format(postURI, faker.code().isbn10())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
+				HttpUtils.createURL(URI.create(String.format(postURI, faker.code().isbn10())), port, null),
 				HttpMethod.POST, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode(),
@@ -326,13 +335,15 @@ class MembershipPlanControllerTests {
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
 	void testGetSuccess(String role, String user) throws MalformedURLException, JsonProcessingException, Exception {
 		// Arrange
-		PostMembershipPlanDto postDto = modelMapper.map(MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gyms, courses), PostMembershipPlanDto.class);
+		PostMembershipPlanDto postDto = modelMapper.map(
+				MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gymUuids, courseUuids),
+				PostMembershipPlanDto.class);
 
 		HttpEntity<PostMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, postDto);
 
 		ResponseEntity<JsonNode> responsePost = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(postURI, brand_FitnessBoxing.getUuid())), port, null), HttpMethod.POST,
-				httpEntity, JsonNode.class);
+				HttpUtils.createURL(URI.create(String.format(postURI, brand_FitnessBoxing.getUuid())), port, null),
+				HttpMethod.POST, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.CREATED, responsePost.getStatusCode(),
 				String.format("Post error: %s", responsePost.getStatusCode()));
@@ -340,8 +351,8 @@ class MembershipPlanControllerTests {
 		// Act
 		httpEntity = HttpUtils.createHttpEntity(role, user, null);
 		MembershipPlanDto createdDto = TestResponseUtils.toDto(responsePost, MembershipPlanDto.class, objectMapper);
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils
-				.createURL(URI.create(String.format(getURI, brand_FitnessBoxing.getUuid(), createdDto.getUuid())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(getURI, brand_FitnessBoxing.getUuid(), createdDto.getUuid())), port, null),
 				HttpMethod.GET, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
@@ -356,8 +367,8 @@ class MembershipPlanControllerTests {
 	void testGetFailureNotFound() throws MalformedURLException, JsonProcessingException, Exception {
 		// Arrange
 		HttpEntity<Object> httpEntity = HttpUtils.createHttpEntity(Roles.Admin, Users.Admin, null);
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(getURI, brand_FitnessBoxing.getUuid(), faker.code().isbn10())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(getURI, brand_FitnessBoxing.getUuid(), faker.code().isbn10())), port, null),
 				HttpMethod.GET, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode(),
@@ -368,7 +379,8 @@ class MembershipPlanControllerTests {
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
 	void testPutSuccess(String role, String user) throws JsonProcessingException, MalformedURLException {
 		// Arrange
-		MembershipPlan membershipPlanToUpdate = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gyms.subList(0, 2), courses.subList(0, 2));
+		MembershipPlan membershipPlanToUpdate = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(),
+				gymUuids.subList(0, 2), courseUuids.subList(0, 2));
 		membershipPlanToUpdate = membershipPlanRepository.save(membershipPlanToUpdate);
 
 		PutMembershipPlanDto putDto = modelMapper.map(membershipPlanToUpdate, PutMembershipPlanDto.class);
@@ -381,17 +393,18 @@ class MembershipPlanControllerTests {
 		if (putDto.getDescription() != null && !putDto.getDescription().isEmpty()) {
 			putDto.getDescription().get(0).setText(putDto.getDescription().get(0).getText() + " - updated");
 		}
-		if (putDto.getIncludedCourses() != null && putDto.getIncludedCourses().size() > 0) {
-			putDto.getIncludedCourses().remove(0);
+		if (putDto.getIncludedCourseUuids() != null && putDto.getIncludedCourseUuids().size() > 0) {
+			putDto.getIncludedCourseUuids().remove(0);
 		}
-		if (putDto.getIncludedGyms() != null && putDto.getIncludedGyms().size() > 0) {
-			putDto.getIncludedGyms().remove(0);
+		if (putDto.getIncludedGymUuids() != null && putDto.getIncludedGymUuids().size() > 0) {
+			putDto.getIncludedGymUuids().remove(0);
 		}
 
 		// Act
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, putDto);
 		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), putDto.getUuid())), port, null),
+				HttpUtils.createURL(URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), putDto.getUuid())),
+						port, null),
 				HttpMethod.PUT, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
@@ -415,7 +428,7 @@ class MembershipPlanControllerTests {
 		putDto.setDescription(null);
 		putDto.setName(null);
 		putDto.setTitle(null);
-		
+
 		membershipPlanToUpdate.setDescription(null);
 		membershipPlanToUpdate.setName(null);
 		membershipPlanToUpdate.setTitle(null);
@@ -423,7 +436,8 @@ class MembershipPlanControllerTests {
 		// Act
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, putDto);
 		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), putDto.getUuid())), port, null),
+				HttpUtils.createURL(URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), putDto.getUuid())),
+						port, null),
 				HttpMethod.PUT, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
@@ -432,46 +446,52 @@ class MembershipPlanControllerTests {
 		MembershipPlanDto updatedDto = TestResponseUtils.toDto(response, MembershipPlanDto.class, objectMapper);
 		assertMembershipPlan(modelMapper.map(membershipPlanToUpdate, MembershipPlanDto.class), updatedDto);
 	}
-	
+
 	@Test
 	void testPutFailureNotFound() throws MalformedURLException, JsonProcessingException, Exception {
-		PutMembershipPlanDto putDto = modelMapper.map(MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
+		PutMembershipPlanDto putDto = modelMapper.map(
+				MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(Roles.Admin, Users.Admin, putDto);
-		
+
 		// Act
 		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), putDto.getUuid())), port, null),
+				HttpUtils.createURL(URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), putDto.getUuid())),
+						port, null),
 				HttpMethod.PUT, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode(),
 				String.format("Get error: %s", response.getStatusCode()));
 	}
-	
+
 	@ParameterizedTest
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
-	void testPutFailureForbiddenBrandMismatch(String role, String user) throws MalformedURLException, JsonProcessingException, Exception {
+	void testPutFailureForbiddenBrandMismatch(String role, String user)
+			throws MalformedURLException, JsonProcessingException, Exception {
 		// Arrange
-		PutMembershipPlanDto putDto = modelMapper.map(MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
+		PutMembershipPlanDto putDto = modelMapper.map(
+				MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, putDto);
 
 		// Act
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(putURI, faker.code().isbn10(), putDto.getUuid())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils
+				.createURL(URI.create(String.format(putURI, faker.code().isbn10(), putDto.getUuid())), port, null),
 				HttpMethod.PUT, httpEntity, JsonNode.class);
-		
+
 		Assertions.assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode(),
 				String.format("Post error: %s", response.getStatusCode()));
 	}
-	
+
 	@ParameterizedTest
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
-	void testPutFailureForbiddenMembershipPlanMismatch(String role, String user) throws MalformedURLException, JsonProcessingException, Exception {
+	void testPutFailureForbiddenMembershipPlanMismatch(String role, String user)
+			throws MalformedURLException, JsonProcessingException, Exception {
 		// Arrange
-		PutMembershipPlanDto putDto = modelMapper.map(MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
+		PutMembershipPlanDto putDto = modelMapper.map(
+				MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, putDto);
 		// Act
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), faker.code().isbn10())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), faker.code().isbn10())), port, null),
 				HttpMethod.PUT, httpEntity, JsonNode.class);
 		Assertions.assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode(),
 				String.format("Post error: %s", response.getStatusCode()));
@@ -481,7 +501,8 @@ class MembershipPlanControllerTests {
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
 	void testActivateSuccess(String role, String user) throws JsonProcessingException, MalformedURLException {
 		// Arrange
-		MembershipPlan membershipPlanToActivate = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null);
+		MembershipPlan membershipPlanToActivate = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null,
+				null);
 		membershipPlanToActivate.setActive(false);
 		membershipPlanToActivate.setActivatedOn(null);
 		membershipPlanToActivate.setDeactivatedOn(null);
@@ -493,10 +514,11 @@ class MembershipPlanControllerTests {
 
 		// Act
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, null);
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(postActivateURI, brand_FitnessBoxing.getUuid(), membershipPlanToActivate.getUuid())),
-						port, null),
-				HttpMethod.POST, httpEntity, JsonNode.class);
+		ResponseEntity<JsonNode> response = testRestTemplate
+				.exchange(
+						HttpUtils.createURL(URI.create(String.format(postActivateURI, brand_FitnessBoxing.getUuid(),
+								membershipPlanToActivate.getUuid())), port, null),
+						HttpMethod.POST, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
 				String.format("Membership Plan activation error: %s", response.getStatusCode()));
@@ -512,10 +534,10 @@ class MembershipPlanControllerTests {
 
 		// Act
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, null);
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils
-				.createURL(URI.create(String.format(postActivateURI, brand_FitnessBoxing.getUuid(), faker.code().isbn10())), port, null),
-				HttpMethod.POST, httpEntity, JsonNode.class);
-																								
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(postActivateURI, brand_FitnessBoxing.getUuid(), faker.code().isbn10())), port,
+				null), HttpMethod.POST, httpEntity, JsonNode.class);
+
 		Assertions.assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode(),
 				String.format("Membership Plan activation error: %s", response.getStatusCode()));
 
@@ -529,7 +551,8 @@ class MembershipPlanControllerTests {
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
 	void testDeactivateSuccess(String role, String user) throws JsonProcessingException, MalformedURLException {
 		// Arrange
-		MembershipPlan membershipPlanToDeactivate = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null);
+		MembershipPlan membershipPlanToDeactivate = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null,
+				null);
 		membershipPlanToDeactivate.setActive(true);
 		membershipPlanToDeactivate.setActivatedOn(Instant.now().truncatedTo(ChronoUnit.DAYS));
 		membershipPlanToDeactivate = membershipPlanRepository.save(membershipPlanToDeactivate);
@@ -539,8 +562,9 @@ class MembershipPlanControllerTests {
 
 		// Act
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, null);
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
-				URI.create(String.format(postDeactivateURI, brand_FitnessBoxing.getUuid(), membershipPlanToDeactivate.getUuid())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
+				HttpUtils.createURL(URI.create(String.format(postDeactivateURI, brand_FitnessBoxing.getUuid(),
+						membershipPlanToDeactivate.getUuid())), port, null),
 				HttpMethod.POST, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
@@ -557,9 +581,9 @@ class MembershipPlanControllerTests {
 
 		// Act
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, null);
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils
-				.createURL(URI.create(String.format(postDeactivateURI, brand_FitnessBoxing.getUuid(), faker.code().ean13())), port, null),
-				HttpMethod.POST, httpEntity, JsonNode.class);
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(postDeactivateURI, brand_FitnessBoxing.getUuid(), faker.code().ean13())), port,
+				null), HttpMethod.POST, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode(),
 				String.format("Membership Plan activation error: %s", response.getStatusCode()));
@@ -584,11 +608,11 @@ class MembershipPlanControllerTests {
 		patchDto.setName(null);
 
 		membershipPlanToPatch.setStartDate(patchDto.getStartDate());
-		
+
 		// Act
 		HttpEntity<PatchMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, patchDto);
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(patchURI, brand_FitnessBoxing.getUuid(), patchDto.getUuid())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(patchURI, brand_FitnessBoxing.getUuid(), patchDto.getUuid())), port, null),
 				HttpMethod.PATCH, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
@@ -600,140 +624,181 @@ class MembershipPlanControllerTests {
 
 	@ParameterizedTest
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
-	void testPatchFailureNotFound(String role, String user) throws MalformedURLException, JsonProcessingException, Exception {
+	void testPatchFailureNotFound(String role, String user)
+			throws MalformedURLException, JsonProcessingException, Exception {
 		// Arrange
 		MembershipPlan patchTarget = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null);
 		PatchMembershipPlanDto patchDto = modelMapper.map(patchTarget, PatchMembershipPlanDto.class);
-		
+
 		HttpEntity<PatchMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, patchDto);
-		
+
 		// Act
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(patchURI, brand_FitnessBoxing.getUuid(), patchDto.getUuid())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(patchURI, brand_FitnessBoxing.getUuid(), patchDto.getUuid())), port, null),
 				HttpMethod.PATCH, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode(),
 				String.format("Patch error: %s", response.getStatusCode()));
 	}
-	
+
 	@ParameterizedTest
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
-	void testPatchFailureForbiddenBrandMismatch(String role, String user) throws MalformedURLException, JsonProcessingException, Exception {
+	void testPatchFailureForbiddenBrandMismatch(String role, String user)
+			throws MalformedURLException, JsonProcessingException, Exception {
 		// Arrange
-		PutMembershipPlanDto putDto = modelMapper.map(MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
+		PutMembershipPlanDto putDto = modelMapper.map(
+				MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, putDto);
 
 		// Act
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(putURI, faker.code().isbn10(), putDto.getUuid())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils
+				.createURL(URI.create(String.format(putURI, faker.code().isbn10(), putDto.getUuid())), port, null),
 				HttpMethod.PATCH, httpEntity, JsonNode.class);
-		
+
 		Assertions.assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode(),
 				String.format("Post error: %s", response.getStatusCode()));
 	}
-	
+
 	@ParameterizedTest
 	@CsvSource({ "admin, Bruno Fortin", "manager, Liliane Denis" })
-	void testPatchFailureForbiddenMembershipPlanMismatch(String role, String user) throws MalformedURLException, JsonProcessingException, Exception {
+	void testPatchFailureForbiddenMembershipPlanMismatch(String role, String user)
+			throws MalformedURLException, JsonProcessingException, Exception {
 		// Arrange
-		PutMembershipPlanDto putDto = modelMapper.map(MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
+		PutMembershipPlanDto putDto = modelMapper.map(
+				MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), null, null), PutMembershipPlanDto.class);
 		HttpEntity<PutMembershipPlanDto> httpEntity = HttpUtils.createHttpEntity(role, user, putDto);
 		// Act
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), faker.code().isbn10())), port, null),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(putURI, brand_FitnessBoxing.getUuid(), faker.code().isbn10())), port, null),
 				HttpMethod.PATCH, httpEntity, JsonNode.class);
-		
+
 		Assertions.assertEquals(HttpStatus.FORBIDDEN, response.getStatusCode(),
 				String.format("Post error: %s", response.getStatusCode()));
 	}
-	
+
 	@Test
 	void testDeleteSuccess() throws JsonProcessingException, MalformedURLException {
 		// Arrange
-		MembershipPlan membershipPlanToDelete = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gyms, courses);
+		MembershipPlan membershipPlanToDelete = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gymUuids,
+				courseUuids);
 		membershipPlanToDelete = membershipPlanRepository.save(membershipPlanToDelete);
 
 		// Act
 		HttpEntity<PutCoachDto> httpEntity = HttpUtils.createHttpEntity(Roles.Admin, Users.Admin, null);
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(deleteURI, brand_FitnessBoxing.getUuid(), membershipPlanToDelete.getUuid())), port, null),
-				HttpMethod.DELETE, httpEntity, JsonNode.class);
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(deleteURI, brand_FitnessBoxing.getUuid(), membershipPlanToDelete.getUuid())),
+				port, null), HttpMethod.DELETE, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.ACCEPTED, response.getStatusCode(),
 				String.format("Coach activation error: %s", response.getStatusCode()));
 
-		
 		httpEntity = HttpUtils.createHttpEntity(Roles.Admin, Users.Admin, null);
-		response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(getURI, brand_FitnessBoxing.getUuid(), membershipPlanToDelete.getUuid())), port, null),
-				HttpMethod.GET, httpEntity, JsonNode.class);
+		response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(getURI, brand_FitnessBoxing.getUuid(), membershipPlanToDelete.getUuid())),
+				port, null), HttpMethod.GET, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode(),
 				String.format("Get error: %s", response.getStatusCode()));
 	}
-	
-	
+
 	@Test
 	void testDeleteReferencesSuccess() throws JsonProcessingException, MalformedURLException {
-		//DELETE REFERENCES SUCCESS: when a course or gym is deleted, it should be removed from all membership plans that reference it. 
+		// DELETE REFERENCES SUCCESS: when a course or gym is deleted, it should be
+		// removed from all membership plans that reference it.
 		// Arrange
-		List<Course> courses = new ArrayList<Course>();
-		List<Gym> gyms = new ArrayList<Gym>();
-		
+		List<String> courseUuids = new ArrayList<>();
+		List<String> gymUuids = new ArrayList<>();
+
 		for (int i = 0; i < 2; i++) {
 			Course item = CourseBuilder.build(brand_FitnessBoxing.getUuid());
 			item = courseRepository.save(item);
-			courses.add(item);
+			courseUuids.add(item.getUuid());
 		}
-		
+
 		for (int i = 0; i < 2; i++) {
-			Gym item = GymBuilder.build(brand_FitnessBoxing.getUuid(), faker.code().isbn10(), faker.address().cityName(), null);
+			Gym item = GymBuilder.build(brand_FitnessBoxing.getUuid(), faker.code().isbn10(),
+					faker.address().cityName(), null);
 			item = gymRepository.save(item);
-			gyms.add(item);
+			gymUuids.add(item.getUuid());
 		}
-		
-		MembershipPlan membershipPlanReferences1 = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gyms, courses);
+
+		MembershipPlan membershipPlanReferences1 = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gymUuids,
+				courseUuids);
 		membershipPlanRepository.save(membershipPlanReferences1);
-		
-		MembershipPlan membershipPlanReferences2 = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gyms, courses);
+
+		MembershipPlan membershipPlanReferences2 = MembershipPlanBuilder.build(brand_FitnessBoxing.getUuid(), gymUuids,
+				courseUuids);
 		membershipPlanRepository.save(membershipPlanReferences2);
-		
+
 		HttpEntity<PutGymDto> httpGymEntity = HttpUtils.createHttpEntity(Roles.Admin, Users.Admin, null);
 		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils.createURL(
-				URI.create(String.format(deleteGymURI, brand_FitnessBoxing.getUuid(), gyms.getFirst().getUuid())), port, null),
-				HttpMethod.DELETE, httpGymEntity, JsonNode.class);
+				URI.create(String.format(deleteGymURI, brand_FitnessBoxing.getUuid(), gymUuids.getFirst())), port,
+				null), HttpMethod.DELETE, httpGymEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.ACCEPTED, response.getStatusCode(),
 				String.format("Gym delete error: %s", response.getStatusCode()));
-		
+
 		HttpEntity<PutCourseDto> httpEntity = HttpUtils.createHttpEntity(Roles.Admin, Users.Admin, null);
-		response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(deleteCourseURI, brand_FitnessBoxing.getUuid(), courses.getFirst().getUuid())), port, null),
-				HttpMethod.DELETE, httpEntity, JsonNode.class);
+		response = testRestTemplate.exchange(HttpUtils.createURL(
+				URI.create(String.format(deleteCourseURI, brand_FitnessBoxing.getUuid(), courseUuids.getFirst())), port,
+				null), HttpMethod.DELETE, httpEntity, JsonNode.class);
 
 		Assertions.assertEquals(HttpStatus.ACCEPTED, response.getStatusCode(),
 				String.format("Course delete error: %s", response.getStatusCode()));
-		
-		Page<MembershipPlan> pageMembershipPlan = membershipPlanRepository.findAllByBrandUuidAndDeletedIsFalse(brand_FitnessBoxing.getUuid(),  PageRequest.of(0, 1000, Sort.Direction.ASC, "name"));
-		
-		pageMembershipPlan.getContent().forEach(membershipPlan -> {
-			Assertions.assertFalse(membershipPlan.getIncludedCourses().stream().filter(course -> course.getUuid().equals(courses.getFirst().getUuid())).findFirst().isPresent(),
-					String.format("Deleted course %s still present in membership plan %s", courses.getFirst().getUuid(), membershipPlan.getUuid()));
-			Assertions.assertFalse(membershipPlan.getIncludedGyms().stream().filter(gym -> gym.getUuid().equals(gyms.getFirst().getUuid())).findFirst().isPresent(),
-					String.format("Deleted gym %s still present in membership plan %s", gyms.getFirst().getUuid(), membershipPlan.getUuid()));
-		});
-		
-		membershipPlanReferences1 = membershipPlanRepository.findByBrandUuidAndUuidAndDeletedIsFalse(brand_FitnessBoxing.getUuid(),  membershipPlanReferences1.getUuid()).get();
-		Assertions.assertTrue(membershipPlanReferences1.getIncludedGyms().size() == 1 && membershipPlanReferences1.getIncludedGyms().get(0).getUuid().equals(gyms.getLast().getUuid()),
-				String.format("Non deleted gym %s not found in membership plan %s", gyms.getLast().getUuid(), membershipPlan.getUuid()));
-		Assertions.assertTrue(membershipPlanReferences1.getIncludedCourses().size() == 1 && membershipPlanReferences1.getIncludedCourses().get(0).getUuid().equals(courses.getLast().getUuid()),
-				String.format("Non deleted course %s not found in membership plan %s", courses.getLast().getUuid(), membershipPlan.getUuid()));
 
-		membershipPlanReferences2 = membershipPlanRepository.findByBrandUuidAndUuidAndDeletedIsFalse(brand_FitnessBoxing.getUuid(),  membershipPlanReferences2.getUuid()).get();
-		Assertions.assertTrue(membershipPlanReferences2.getIncludedGyms().size() == 1 && membershipPlanReferences2.getIncludedGyms().get(0).getUuid().equals(gyms.getLast().getUuid()),
-				String.format("Non deleted gym %s not found in membership plan %s", gyms.getLast().getUuid(), membershipPlan.getUuid()));
-		Assertions.assertTrue(membershipPlanReferences2.getIncludedCourses().size() == 1 && membershipPlanReferences2.getIncludedCourses().get(0).getUuid().equals(courses.getLast().getUuid()),
-				String.format("Non deleted course %s not found in membership plan %s", courses.getLast().getUuid(), membershipPlan.getUuid()));
+		PageResult<MembershipPlan> pageMembershipPlan = membershipPlanRepository
+				.findAllByBrandUuidAndDeletedIsFalse(brand_FitnessBoxing.getUuid(), PageRequest.of(0, 1000));
+
+		pageMembershipPlan.getContent().forEach(membershipPlan -> {
+			if (membershipPlan.getIncludedCourseUuids() != null) {
+				Assertions.assertFalse(membershipPlan.getIncludedCourseUuids().stream()
+						.filter(courseUuid -> courseUuid.equals(courseUuids.getFirst())).findFirst().isPresent(),
+						String.format("Deleted course %s still present in membership plan %s", courseUuids.getFirst(),
+								membershipPlan.getUuid()));
+			}
+
+			if (membershipPlan.getIncludedGymUuids() != null) {
+				Assertions.assertFalse(
+						membershipPlan.getIncludedGymUuids().stream()
+								.filter(gymUuid -> gymUuid.equals(gymUuids.getFirst())).findFirst().isPresent(),
+						String.format("Deleted gym %s still present in membership plan %s", gymUuids.getFirst(),
+								membershipPlan.getUuid()));
+			}
+		});
+
+		membershipPlanReferences1 = membershipPlanRepository.findByBrandUuidAndUuidAndDeletedIsFalse(
+				brand_FitnessBoxing.getUuid(), membershipPlanReferences1.getUuid()).get();
+		if (membershipPlan.getIncludedCourseUuids() != null) {
+			Assertions.assertTrue(
+					membershipPlanReferences1.getIncludedGymUuids().size() == 1
+							&& membershipPlanReferences1.getIncludedGymUuids().get(0).equals(gymUuids.getLast()),
+					String.format("Non deleted gym %s not found in membership plan %s", gymUuids.getLast(),
+							membershipPlan.getUuid()));
+		}
+		if (membershipPlan.getIncludedGymUuids() != null) {
+			Assertions.assertTrue(
+					membershipPlanReferences1.getIncludedCourseUuids().size() == 1
+							&& membershipPlanReferences1.getIncludedCourseUuids().get(0).equals(courseUuids.getLast()),
+					String.format("Non deleted course %s not found in membership plan %s", courseUuids.getLast(),
+							membershipPlan.getUuid()));
+		}
+
+		membershipPlanReferences2 = membershipPlanRepository.findByBrandUuidAndUuidAndDeletedIsFalse(
+				brand_FitnessBoxing.getUuid(), membershipPlanReferences2.getUuid()).get();
+		if (membershipPlan.getIncludedCourseUuids() != null) {
+			Assertions.assertTrue(
+					membershipPlanReferences2.getIncludedGymUuids().size() == 1
+							&& membershipPlanReferences2.getIncludedGymUuids().get(0).equals(gymUuids.getLast()),
+					String.format("Non deleted gym %s not found in membership plan %s", gymUuids.getLast(),
+							membershipPlan.getUuid()));
+		}
+		if (membershipPlan.getIncludedGymUuids() != null) {
+			Assertions.assertTrue(
+				membershipPlanReferences2.getIncludedCourseUuids().size() == 1
+						&& membershipPlanReferences2.getIncludedCourseUuids().get(0).equals(courseUuids.getLast()),
+				String.format("Non deleted course %s not found in membership plan %s", courseUuids.getLast(),
+						membershipPlan.getUuid()));
+		}
 	}
 
 	@Test
@@ -789,7 +854,7 @@ class MembershipPlanControllerTests {
 		inactivePlan.setActive(false);
 		inactivePlan.setDeleted(false);
 		membershipPlanRepository.save(inactivePlan);
-		
+
 		java.util.Date currentDate = Date.from(Instant.now().truncatedTo(ChronoUnit.DAYS));
 		String currentDateStr = currentDate.toInstant().toString();
 
@@ -801,66 +866,64 @@ class MembershipPlanControllerTests {
 		params.add(currentDateParam, currentDateStr);
 
 		// Act
-		ResponseEntity<JsonNode> response = testRestTemplate.exchange(
-				HttpUtils.createURL(URI.create(String.format(listActiveURI, brand_ActiveDateBrand.getUuid())), port, params),
+		ResponseEntity<JsonNode> response = testRestTemplate.exchange(HttpUtils
+				.createURL(URI.create(String.format(listActiveURI, brand_ActiveDateBrand.getUuid())), port, params),
 				HttpMethod.GET, httpEntity, JsonNode.class);
 
 		// Assert — HTTP status
 		Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
 				String.format("List active error: %s", response.getStatusCode()));
 
-		Page<MembershipPlanDto> page = TestResponseUtils.toPage(response, new TypeReference<Page<MembershipPlanDto>>() {}, objectMapper);
+		PageResultDto<MembershipPlanDto> page = TestResponseUtils.toPage(response,
+				new TypeReference<PageResultDto<MembershipPlanDto>>() {
+				}, objectMapper);
 
-		// Assert — only the 2 active plans are returned (activePlanNoEndDate + activePlanWithEndDate)
+		// Assert — only the 2 active plans are returned (activePlanNoEndDate +
+		// activePlanWithEndDate)
 		Assertions.assertEquals(2, page.getTotalElements(),
 				String.format("Expected 2 active membership plans but got: %d", page.getTotalElements()));
-		Assertions.assertEquals(2, page.getNumberOfElements(),
-				String.format("Expected 2 elements on page but got: %d", page.getNumberOfElements()));
+		Assertions.assertEquals(2, page.getContent().size(),
+				String.format("Expected 2 elements on page but got: %d", page.getContent().size()));
 
 		// Assert — every returned plan is not deleted, is active
-		page.get().forEach(plan -> {
-			Assertions.assertFalse(plan.isDeleted() ,
-					String.format("Plan %s should not be deleted", plan.getUuid()));
-			Assertions.assertTrue(plan.isActive(),
-					String.format("Plan %s should be active", plan.getUuid()));
+		page.getContent().forEach(plan -> {
+			Assertions.assertFalse(plan.isDeleted(), String.format("Plan %s should not be deleted", plan.getUuid()));
+			Assertions.assertTrue(plan.isActive(), String.format("Plan %s should be active", plan.getUuid()));
 		});
 
 		// Assert — every returned plan has startDate <= currentDate
-		page.get().forEach(plan -> {
+		page.getContent().forEach(plan -> {
 			Assertions.assertNotNull(plan.getStartDate(),
 					String.format("Plan %s startDate must not be null", plan.getUuid()));
-			Assertions.assertFalse(plan.getStartDate().after(currentDate),
-					String.format("Plan %s startDate %s is after currentDate %s", plan.getUuid(), plan.getStartDate(), currentDate));
+			Assertions.assertFalse(plan.getStartDate().after(currentDate), String.format(
+					"Plan %s startDate %s is after currentDate %s", plan.getUuid(), plan.getStartDate(), currentDate));
 		});
 
 		// Assert — every returned plan has endDate == null or endDate >= currentDate
-		page.get().forEach(plan -> {
+		page.getContent().forEach(plan -> {
 			if (plan.getEndDate() != null) {
-				Assertions.assertFalse(plan.getEndDate().before(currentDate),
-						String.format("Plan %s endDate %s is before currentDate %s", plan.getUuid(), plan.getEndDate(), currentDate));
+				Assertions.assertFalse(plan.getEndDate().before(currentDate), String.format(
+						"Plan %s endDate %s is before currentDate %s", plan.getUuid(), plan.getEndDate(), currentDate));
 			}
 		});
 
 		// Assert — the two expected plans are present
 		Assertions.assertTrue(
-				page.get().anyMatch(p -> p.getUuid().equals(activePlanNoEndDate.getUuid())),
+				page.getContent().stream().anyMatch(p -> p.getUuid().equals(activePlanNoEndDate.getUuid())),
 				"Expected activePlanNoEndDate to be present in results");
 		Assertions.assertTrue(
-				page.get().anyMatch(p -> p.getUuid().equals(activePlanWithEndDate.getUuid())),
+				page.getContent().stream().anyMatch(p -> p.getUuid().equals(activePlanWithEndDate.getUuid())),
 				"Expected activePlanWithEndDate to be present in results");
 
 		// Assert — excluded plans are NOT present
-		Assertions.assertFalse(
-				page.get().anyMatch(p -> p.getUuid().equals(futurePlan.getUuid())),
+		Assertions.assertFalse(page.getContent().stream().anyMatch(p -> p.getUuid().equals(futurePlan.getUuid())),
 				"futurePlan should not be returned");
-		Assertions.assertFalse(
-				page.get().anyMatch(p -> p.getUuid().equals(expiredPlan.getUuid())),
+		Assertions.assertFalse(page.getContent().stream().anyMatch(p -> p.getUuid().equals(expiredPlan.getUuid())),
 				"expiredPlan should not be returned");
 		Assertions.assertFalse(
-				page.get().anyMatch(p -> p.getUuid().equals(deletedActivePlan.getUuid())),
+				page.getContent().stream().anyMatch(p -> p.getUuid().equals(deletedActivePlan.getUuid())),
 				"deletedActivePlan should not be returned");
-		Assertions.assertFalse(
-				page.get().anyMatch(p -> p.getUuid().equals(inactivePlan.getUuid())),
+		Assertions.assertFalse(page.getContent().stream().anyMatch(p -> p.getUuid().equals(inactivePlan.getUuid())),
 				"inactivePlan should not be returned");
 	}
 
@@ -868,14 +931,14 @@ class MembershipPlanControllerTests {
 		if (expected.getUuid() != null) {
 			Assertions.assertEquals(expected.getUuid(), result.getUuid());
 		}
-		
+
 		Assertions.assertEquals(expected.getBrandUuid(), result.getBrandUuid());
 		Assertions.assertEquals(expected.getDurationInMonths(), result.getDurationInMonths());
 		Assertions.assertEquals(expected.getNumberOfClasses(), result.getNumberOfClasses());
 		Assertions.assertEquals(expected.isGuestPrivilege(), result.isGuestPrivilege());
 		Assertions.assertEquals(expected.isPromotional(), result.isPromotional());
 		Assertions.assertEquals(expected.isGiftCard(), result.isGiftCard());
-		
+
 		Assertions.assertEquals(expected.getPeriod(), result.getPeriod());
 		Assertions.assertEquals(expected.getBillingFrequency(), result.getBillingFrequency());
 
@@ -956,54 +1019,53 @@ class MembershipPlanControllerTests {
 		if (expected.getTermsOfUse() == null) {
 			Assertions.assertNull(result.getTermsOfUse());
 		}
-		
+
 		if (expected.getCost() == null) {
 			Assertions.assertNull(result.getCost());
 		}
-		
+
 		if (expected.getCost() != null) {
 			Assertions.assertNotNull(result.getCost());
-			
+
 			Assertions.assertEquals(expected.getCost().getAmount(), result.getCost().getAmount());
 			Assertions.assertNotNull(result.getCost().getCurrency());
-			Assertions.assertEquals(expected.getCost().getCurrency().getCode(), result.getCost().getCurrency().getCode());
-			Assertions.assertEquals(expected.getCost().getCurrency().getName(), result.getCost().getCurrency().getName());
-			Assertions.assertEquals(expected.getCost().getCurrency().getSymbol(), result.getCost().getCurrency().getSymbol());
+			Assertions.assertEquals(expected.getCost().getCurrency().getCode(),
+					result.getCost().getCurrency().getCode());
+			Assertions.assertEquals(expected.getCost().getCurrency().getName(),
+					result.getCost().getCurrency().getName());
+			Assertions.assertEquals(expected.getCost().getCurrency().getSymbol(),
+					result.getCost().getCurrency().getSymbol());
 		}
-		
+
 		if (expected.getCost() == null) {
 			Assertions.assertNull(result.getCost());
 		}
-		
-		if (expected.getStartDate() != null) {
-			LocalDate expecteStart = expected.getStartDate()
-			        .toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
 
-			LocalDate resultStart = result.getStartDate()
-			        .toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+		if (expected.getStartDate() != null) {
+			LocalDate expecteStart = expected.getStartDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+
+			LocalDate resultStart = result.getStartDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
 			Assertions.assertEquals(expecteStart, resultStart);
 		}
-		
-		if (expected.getEndDate() != null) {
-			LocalDate expecteEnd = expected.getEndDate()
-			        .toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
 
-			LocalDate resultEnd = result.getEndDate()
-			        .toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+		if (expected.getEndDate() != null) {
+			LocalDate expecteEnd = expected.getEndDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+
+			LocalDate resultEnd = result.getEndDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
 			Assertions.assertEquals(expecteEnd, resultEnd);
 		}
-		
-		if (expected.getIncludedGyms() != null) {
-			for (GymDto gym : expected.getIncludedGyms()) {
-				Assertions.assertTrue(result.getIncludedGyms().stream().filter(g -> g.getUuid().equals(gym.getUuid())).findFirst().isPresent(),
-						String.format("Gym %s is missing in result", gym.getUuid()));
+
+		if (expected.getIncludedGymUuids() != null) {
+			for (String gymUuid : expected.getIncludedGymUuids()) {
+				Assertions.assertTrue(result.getIncludedGymUuids().stream().filter(item -> item.equals(gymUuid))
+						.findFirst().isPresent(), String.format("Gym %s is missing in result", gymUuid));
 			}
 		}
-		
-		if (expected.getIncludedCourses() != null) {
-			for (CourseDto course : expected.getIncludedCourses()) {
-				Assertions.assertTrue(result.getIncludedCourses().stream().filter(item -> item.getUuid().equals(course.getUuid())).findFirst().isPresent(),
-						String.format("Course %s is missing in result", course.getUuid()));
+
+		if (expected.getIncludedCourseUuids() != null) {
+			for (String courseUuid : expected.getIncludedCourseUuids()) {
+				Assertions.assertTrue(result.getIncludedCourseUuids().stream().filter(item -> item.equals(courseUuid))
+						.findFirst().isPresent(), String.format("Course %s is missing in result", courseUuid));
 			}
 		}
 	}
